--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                             <a href="https://quocviet1532000.github.io/quocviet1532.github.io/" target="_blank" class="myself-link">
                                                 <div class="myself-zoom">
                                                     <div class="myself-wrapper">
-                                                        <img src="./assets/img/sky.png" alt="" class="myself-zoom-img">
+                                                        <img src="./assets/img/sky.jpg" alt="" class="myself-zoom-img">
                                                     </div>
                                                 </div>
                                                 <h3 class="myself-zoom-heading">Sky</h3>
@@ -196,7 +196,7 @@
                                             <a href="https://quocviet1532000.github.io/musicplayer.github.io/" target="_blank" class="myself-link">
                                                 <div class="myself-zoom">
                                                     <div class="myself-wrapper">
-                                                        <img src="./assets/img/musicplayer.png" alt="" class="myself-zoom-img">
+                                                        <img src="./assets/img/musicplayer.jpg" alt="" class="myself-zoom-img">
                                                     </div>
                                                 </div>
                                                 <h3 class="myself-zoom-heading">Music Player</h3>
@@ -207,7 +207,7 @@
                                             <a href="https://quocviet1532000.github.io/myrose.github.io/" target="_blank" class="myself-link">
                                                 <div class="myself-zoom">
                                                     <div class="myself-wrapper">
-                                                        <img src="./assets/img/rose.png" alt="" class="myself-zoom-img">
+                                                        <img src="./assets/img/rose.jpg" alt="" class="myself-zoom-img">
                                                     </div>
                                                 </div>
                                                 <h3 class="myself-zoom-heading">Rosé</h3>
@@ -218,7 +218,7 @@
                                             <a href="https://quocviet1532000.github.io/shoppe.github.io/" target="_blank" class="myself-link">
                                                 <div class="myself-zoom">
                                                     <div class="myself-wrapper">
-                                                        <img src="./assets/img/shopee.png" alt="" class="myself-zoom-img">
+                                                        <img src="./assets/img/shopee.jpg" alt="" class="myself-zoom-img">
                                                     </div>
                                                 </div>
                                                 <h3 class="myself-zoom-heading">Shopee</h3>
